Modelo y Registro de usuarios

--- a/views/usuario/registro.phtml
+++ b/views/usuario/registro.phtml
@@ -1,11 +1,17 @@
 <h1>Registrarse</h1>
 
-<form action="index.php?controller=usuario&action=save" method="POST">
+<?php if(isset($_SESSION['register']) && $_SESSION['register']): ?>
+    <strong>Registro completado correctamente</strong>
+<?php else: ?>
+    <strong>Registro fallido</strong>    
+<?php endif; ?>
+
+<form action="<?=BASE_URL?>usuario/save" method="POST">
     <label for="nombre">Nombre:</label>
     <input type="text" name="nombre" required>
 
-    <label for="apellido">Apellido:</label>
-    <input type="text" name="apellido" required>
+    <label for="apellidos">Apellidos:</label>
+    <input type="text" name="apellidos" required>
 
     <label for="email">Email:</label>
     <input type="email" name="email" required>
