Validando datos de los campos

--- a/views/usuario/registro.phtml
+++ b/views/usuario/registro.phtml
@@ -1,24 +1,33 @@
 <h1>Registrarse</h1>
 
-<?php if(isset($_SESSION['register']) && $_SESSION['register']): ?>
-    <strong>Registro completado correctamente</strong>
-<?php else: ?>
-    <strong>Registro fallido</strong>    
+<?php if (isset($_SESSION['register']) && $_SESSION['register'] == 'complete') : ?>
+    <strong class="alert-green">Registro completado correctamente</strong>
+<?php elseif (isset($_SESSION['register']) && $_SESSION['register'] == 'failed') : ?>
+    <strong class="alert-red">Registro fallido, introduce bien los datos</strong>
 <?php endif; ?>
 
-<form action="<?=BASE_URL?>usuario/save" method="POST">
+<!--Borrar sesion register-->
+<?php Utils::DeleteSession('register'); ?>
+
+
+<form action="<?= BASE_URL ?>usuario/save" method="POST">
     <label for="nombre">Nombre:</label>
     <input type="text" name="nombre" required>
+    <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'nombre') : ''; ?>
 
     <label for="apellidos">Apellidos:</label>
     <input type="text" name="apellidos" required>
+    <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'apellidos') : ''; ?>
 
     <label for="email">Email:</label>
     <input type="email" name="email" required>
+    <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'email') : ''; ?>
 
     <label for="password">Contraseña:</label>
     <input type="password" name="password" required>
+    <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'password') : ''; ?>
 
     <input type="submit" value="Registrarse">
 
-</form> 
+    <?php Utils::DeleteSession('errores'); ?>
+</form>
