--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,7 +156,7 @@ input[type="password"],
 select {
 	display: block;
 	width: 95%;
-	margin: 2px 0;
+	margin: 0px 0;
 }
 
 
@@ -293,12 +293,28 @@ input[type="submit"] {
 
 /*=====  End of FOOTER  ======*/
 
+/*
+ 
+ 88""Yb 888888  dP""b8 88 .dP"Y8 888888 88""Yb  dP"Yb      88""Yb 88  88 888888 8b    d8 88     
+ 88__dP 88__   dP   `" 88 `Ybo."   88   88__dP dP   Yb     88__dP 88  88   88   88b  d88 88     
+ 88"Yb  88""   Yb  "88 88 o.`Y8b   88   88"Yb  Yb   dP .o. 88"""  888888   88   88YbdP88 88  .o 
+ 88  Yb 888888  YboodP 88 8bodP'   88   88  Yb  YbodP  `"' 88     88  88   88   88 YY 88 88ood8 
+ 
+*/
 
 
-
-
-
-
+.alert-green {
+	color: #00710d;
+}
+.alert-red {
+	color: #8B0000;
+}
+.alerta-error {
+	background-color: #8B0000;
+	padding: 3px 0px;
+	text-align: center;
+	color: #ffffff;
+}
 
 
 
