--- a/views/usuario/registro.phtml
+++ b/views/usuario/registro.phtml
@@ -5,29 +5,30 @@
 <?php elseif (isset($_SESSION['register']) && $_SESSION['register'] == 'failed') : ?>
     <strong class="alert-red">Registro fallido, introduce bien los datos</strong>
 <?php endif; ?>
-
 <!--Borrar sesion register-->
 <?php Utils::DeleteSession('register'); ?>
 
 
+
 <form action="<?= BASE_URL ?>usuario/save" method="POST">
     <label for="nombre">Nombre:</label>
-    <input type="text" name="nombre" required>
+    <input type="text" name="nombre" value="<?php echo isset($_SESSION['campos']) ? $_SESSION['campos']['nombre'] : ''; ?>" required>
     <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'nombre') : ''; ?>
 
     <label for="apellidos">Apellidos:</label>
-    <input type="text" name="apellidos" required>
+    <input type="text" name="apellidos" value="<?php echo isset($_SESSION['campos']) ? $_SESSION['campos']['apellidos'] : ''; ?>" required>
     <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'apellidos') : ''; ?>
 
     <label for="email">Email:</label>
-    <input type="email" name="email" required>
+    <input type="email" name="email" value="<?php echo isset($_SESSION['campos']) ? $_SESSION['campos']['email'] : ''; ?>" required>
     <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'email') : ''; ?>
 
     <label for="password">Contraseña:</label>
-    <input type="password" name="password" required>
+    <input type="password" name="password" value="<?php echo isset($_SESSION['campos']) ? $_SESSION['campos']['password'] : ''; ?>" required>
     <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'password') : ''; ?>
 
     <input type="submit" value="Registrarse">
 
     <?php Utils::DeleteSession('errores'); ?>
+    <?php Utils::DeleteSession('campos'); ?>
 </form>
