--- a/views/layout/sidebar.phtml
+++ b/views/layout/sidebar.phtml
@@ -1,14 +1,20 @@
 <!--	BARRA LATERAL	-->
 <aside id="lateral">
+
     <div id="login" class="bloque-aside">
-        <h3>Entrar a la Web</h3>
-        <form action="#" method="post">
-            <label for="email">Email</label>
-            <input type="email" name="email">
-            <label for="password">Contraseña</label>
-            <input type="password" name="password">
-            <input type="submit" value="Enviar">
-        </form>
+        <?php if (!isset($_SESSION['identity'])) : ?>
+            <h3>Entrar a la Web</h3>
+            <form action="<?= BASE_URL ?>usuario/login" method="post">
+                <label for="email">Email</label>
+                <input type="email" name="email">
+                <label for="password">Contraseña</label>
+                <input type="password" name="password">
+                <input type="submit" value="Enviar">
+            </form>
+            <?php else : ?>
+            <h3><?= $_SESSION['identity']->nombre ?> <?= $_SESSION['identity']->apellidos ?></h3>
+        <?php endif; ?> 
+
         <ul>
             <li>
                 <a href="#">Mis pedidos</a>
