Mejorando el menu con respecto a la jerarquia de su usuario

--- a/views/layout/sidebar.phtml
+++ b/views/layout/sidebar.phtml
@@ -11,20 +11,20 @@
                 <input type="password" name="password">
                 <input type="submit" value="Enviar">
             </form>
-            <?php else : ?>
+        <?php else : ?>
             <h3><?= $_SESSION['identity']->nombre ?> <?= $_SESSION['identity']->apellidos ?></h3>
-        <?php endif; ?> 
+        <?php endif; ?>
 
         <ul>
-            <li>
-                <a href="#">Mis pedidos</a>
-            </li>
-            <li>
-                <a href="#">Gestionar pedidos</a>
-            </li>
-            <li>
-                <a href="#">Gestionar categorias</a>
-            </li>
+            <?php if (isset($_SESSION['admin'])) : ?>
+                <li><a href="#">Gestionar categorias</a></li>
+                <li><a href="#">Gestionar productos</a></li>
+                <li><a href="#">Gestionar pedidos</a></li>
+            <?php endif; ?>
+            <?php if (isset($_SESSION['identity'])) : ?>
+                <li><a href="#">Mis pedidos</a></li>
+                <li><a href="<?= BASE_URL ?>usuario/logout">Cerrar sesión</a></li>
+            <?php endif; ?>
         </ul>
     </div> <!--	fin #login	-->
 
