--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,6 +202,12 @@ input[type="submit"],
 	color: #aaa!important;
 }
 
+.button-small {
+	width: 120px;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
 label,
 input[type="submit"] {
 	margin-top: 10px;
@@ -316,7 +322,22 @@ input[type="submit"] {
 	color: #ffffff;
 }
 
+/*
+ 
+  dP""b8    db    888888 888888  dP""b8  dP"Yb  88""Yb 88    db        88 88b 88 8888b.  888888 Yb  dP     88""Yb 88  88 888888 8b    d8 88     
+ dP   `"   dPYb     88   88__   dP   `" dP   Yb 88__dP 88   dPYb       88 88Yb88  8I  Yb 88__    YbdP      88__dP 88  88   88   88b  d88 88     
+ Yb       dP__Yb    88   88""   Yb  "88 Yb   dP 88"Yb  88  dP__Yb      88 88 Y88  8I  dY 88""    dPYb  .o. 88"""  888888   88   88YbdP88 88  .o 
+  YboodP dP""""Yb   88   888888  YboodP  YbodP  88  Yb 88 dP""""Yb     88 88  Y8 8888Y"  888888 dP  Yb `"' 88     88  88   88   88 YY 88 88ood8 
+ 
+*/
 
-
-
+table{
+	border: 1px solid #555555;
+	width: 100%;
+	text-align: center;
+}
+td{
+	border-top: 1px solid #cccccc;
+	padding-top: 2px;
+}
 
