--- a/views/categoria/index.phtml
+++ b/views/categoria/index.phtml
@@ -1,6 +1,6 @@
 <h1>Gestionar categorias</h1>
 
-<a href="<?=BASE_URL?>"categoria/crear" class="button button-small">Crear Categoria</a>
+<a href="<?=BASE_URL?>categoria/crear" class="button button-small">Crear Categoria</a>
 
 <table>
     <tr>
