--- a/views/layout/header.phtml
+++ b/views/layout/header.phtml
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="<?=BASE_URL?>/assets/css/normalize.css">
-    <link rel="stylesheet" href="<?=BASE_URL?>/assets/css/styles.css">
+    <link rel="stylesheet" href="<?= BASE_URL ?>/assets/css/normalize.css">
+    <link rel="stylesheet" href="<?= BASE_URL ?>/assets/css/styles.css">
     <title>Tienda de Camisetas</title>
 </head>
 
@@ -14,32 +14,24 @@
     <!--	CABECERA	-->
     <header id="header">
         <div id="logo">
-            <img src="<?= BASE_URL?>/assets/img/camiseta.png" alt="Camiseta Logo">
+            <img src="<?= BASE_URL ?>/assets/img/camiseta.png" alt="Camiseta Logo">
 
             <a href="index.php">Tienda de camisetas</a>
         </div>
     </header>
     <!--	MENU	-->
+    <?php $categorias = Utils::showCategorias(); ?>
     <nav id="menu">
         <ul>
             <li>
                 <a href="#">Inicio</a>
             </li>
-            <li>
-                <a href="#">Categoria 1</a>
-            </li>
-            <li>
-                <a href="#">Categoria 2</a>
-            </li>
-            <li>
-                <a href="#">Categoria 3</a>
-            </li>
-            <li>
-                <a href="#">Categoria 4</a>
-            </li>
-            <li>
-                <a href="#">Categoria 5</a>
-            </li>
+            <?php while ($cat = $categorias->fetch_object()) : ?>
+                <li>
+                    <a href="#"><?=$cat->nombre;?></a>
+                </li>
+            <?php endwhile; ?>
+
         </ul>
     </nav>
 
