--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,6 +164,8 @@ select {
 input[type="email"],
 input[type="password"],
 input[type="text"],
+input[type="number"],
+textarea,
 select {
 	border: 1px solid #C9C9C9;
 	box-shadow: 0px 0px 2px #ccc inset;
@@ -341,3 +343,14 @@ td{
 	padding-top: 2px;
 }
 
+/*
+88""Yb 88""Yb  dP"Yb  8888b.  88   88  dP""b8 888888  dP"Yb  .dP"Y8      dP""b8 88""Yb 888888    db    88""Yb     88""Yb 88  88 888888 8b    d8 88
+88__dP 88__dP dP   Yb  8I  Yb 88   88 dP   `"   88   dP   Yb `Ybo."     dP   `" 88__dP 88__     dPYb   88__dP     88__dP 88  88   88   88b  d88 88
+88"""  88"Yb  Yb   dP  8I  dY Y8   8P Yb        88   Yb   dP o.`Y8b     Yb      88"Yb  88""    dP__Yb  88"Yb  .o. 88"""  888888   88   88YbdP88 88  .o
+88     88  Yb  YbodP  8888Y"  `YbodP'  YboodP   88    YbodP  8bodP'      YboodP 88  Yb 888888 dP""""Yb 88  Yb `"' 88     88  88   88   88 YY 88 88ood8
+*/
+
+.form-container{
+	width: 50%;
+	margin-left: 25%;
+}
