--- a/views/layout/sidebar.phtml
+++ b/views/layout/sidebar.phtml
@@ -18,7 +18,7 @@
         <ul>
             <?php if (isset($_SESSION['admin'])) : ?>
                 <li><a href="<?= BASE_URL ?>categoria/index">Gestionar categorias</a></li>
-                <li><a href="#">Gestionar productos</a></li>
+                <li><a href="<?= BASE_URL ?>producto/gestion">Gestionar productos</a></li>
                 <li><a href="#">Gestionar pedidos</a></li>
             <?php endif; ?>
             <?php if (isset($_SESSION['identity'])) : ?>
