--- a/views/producto/gestion.phtml
+++ b/views/producto/gestion.phtml
@@ -2,6 +2,13 @@
 
 <a href="<?= BASE_URL ?>producto/crear" class="button button-small">Crear Producto</a>
 
+<?php if (isset($_SESSION['producto']) && $_SESSION['producto'] == 'complete') : ?>
+    <br>
+    <strong class="alert-green">El producto se ha creado correctamente</strong>
+<?php endif; ?>
+<?php Utils::DeleteSession('producto'); ?>
+
+
 <table>
     <tr>
         <th>Id</th>
