--- a/views/producto/crear.phtml
+++ b/views/producto/crear.phtml
@@ -7,7 +7,7 @@
 <?php Utils::DeleteSession('producto'); ?>
 
 <div class="form-container">
-    <form action="<?= BASE_URL ?>producto/save" method="POST">
+    <form action="<?= BASE_URL ?>producto/save" method="POST" enctype="multipart/form-data">
         <label for="nombre">Nombre:</label>
         <input type="text" name="nombre" value="<?php echo isset($_SESSION['campos']) ? $_SESSION['campos']['nombre'] : ''; ?>">
         <?php echo isset($_SESSION['errores']) ? Utils::MostrarError($_SESSION['errores'], 'nombre') : ''; ?>
