--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ html {
   box-sizing: inherit;
 }
 
+
 body {
 	background-image: url(../img/bg.png);
 	font-family: sans-serif, Helvetica, Arial;
@@ -185,11 +186,17 @@ select:focus {
 
 input[type="submit"],
 .button {
+	clear : both;
+	content : '';
+	display : block;
 	border-radius: 4px;
 	padding: 5px 15px;
 	background: #1579B5;
 	color: #FFFFFF;
 	cursor: pointer;
+}
+input[type="file"]{
+	margin-top: 10px;
 }
 .button {
 	background-color: #33ae3d;
@@ -210,11 +217,19 @@ input[type="submit"],
 	margin-bottom: 20px;
 }
 
+
 label,
 input[type="submit"] {
 	margin-top: 10px;
 }
 
+.thumb{
+	float: inline-start;
+	width: 100px;
+	margin: 10px 20px 10px 0;
+}
+
+/* FORMULARIO LOGIN */
 #login ul {
 	margin-top: 15px;
 	padding: 0px;
@@ -223,10 +238,13 @@ input[type="submit"] {
 }
 
 #login ul li{
-	list-style: square;
+	list-style: none;
 	padding: 5px 0;
 }
 
+.fas{
+	margin-right: 5px;
+}
 
 /*===========================================
 =            CONTENIDO PRINCIPAL            =
@@ -237,7 +255,7 @@ input[type="submit"] {
 	border-left: 1px solid #CCCCCC;
 	box-shadow: -5px -1px 5px #DDDDDD;
 	padding: 25px;
-	min-height: 500px;
+	min-height: 850px;
 }
 
 #central h1 {
@@ -342,6 +360,21 @@ td{
 	border-top: 1px solid #cccccc;
 	padding-top: 2px;
 }
+
+
+/*
+ 
+ 88""Yb 88""Yb  dP"Yb  8888b.  88   88  dP""b8 888888  dP"Yb  .dP"Y8      dP""b8 888888 .dP"Y8 888888 88  dP"Yb  88b 88     88""Yb 88  88 888888 8b    d8 88     
+ 88__dP 88__dP dP   Yb  8I  Yb 88   88 dP   `"   88   dP   Yb `Ybo."     dP   `" 88__   `Ybo."   88   88 dP   Yb 88Yb88     88__dP 88  88   88   88b  d88 88     
+ 88"""  88"Yb  Yb   dP  8I  dY Y8   8P Yb        88   Yb   dP o.`Y8b     Yb  "88 88""   o.`Y8b   88   88 Yb   dP 88 Y88 .o. 88"""  888888   88   88YbdP88 88  .o 
+ 88     88  Yb  YbodP  8888Y"  `YbodP'  YboodP   88    YbodP  8bodP'      YboodP 888888 8bodP'   88   88  YbodP  88  Y8 `"' 88     88  88   88   88 YY 88 88ood8 
+ 
+*/
+
+.far {
+	margin: 0 6px;
+}
+
 
 /*
 88""Yb 88""Yb  dP"Yb  8888b.  88   88  dP""b8 888888  dP"Yb  .dP"Y8      dP""b8 88""Yb 888888    db    88""Yb     88""Yb 88  88 888888 8b    d8 88
