--- a/views/categoria/index.phtml
+++ b/views/categoria/index.phtml
@@ -1,4 +1,4 @@
-<h1>Gestionar categorias</h1>
+<h1><i class="fas fa-layer-group"></i>Categorias</h1>
 
 <a href="<?= BASE_URL ?>categoria/crear" class="button button-small">Crear Categoria</a>
 
