--- a/views/layout/header.phtml
+++ b/views/layout/header.phtml
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="<?= BASE_URL ?>/assets/css/normalize.css">
     <link rel="stylesheet" href="<?= BASE_URL ?>/assets/css/styles.css">
     <title>Tienda de Camisetas</title>
@@ -28,7 +29,7 @@
             </li>
             <?php while ($cat = $categorias->fetch_object()) : ?>
                 <li>
-                    <a href="#"><?=$cat->nombre;?></a>
+                    <a href="#"><?= $cat->nombre; ?></a>
                 </li>
             <?php endwhile; ?>
 
