--- a/views/layout/sidebar.phtml
+++ b/views/layout/sidebar.phtml
@@ -12,20 +12,21 @@
                 <input type="submit" value="Enviar">
             </form>
         <?php else : ?>
-            <h3><?= $_SESSION['identity']->nombre ?> <?= $_SESSION['identity']->apellidos ?></h3>
+            <h3><i class="fas fa-user"></i><?= $_SESSION['identity']->nombre ?> <?= $_SESSION['identity']->apellidos ?></h3>
         <?php endif; ?>
 
         <ul>
             <?php if (isset($_SESSION['admin'])) : ?>
-                <li><a href="<?= BASE_URL ?>categoria/index">Gestionar categorias</a></li>
-                <li><a href="<?= BASE_URL ?>producto/gestion">Gestionar productos</a></li>
-                <li><a href="#">Gestionar pedidos</a></li>
+
+                <li><i class="fas fa-layer-group"></i><a href="<?= BASE_URL ?>categoria/index">Categorias</a></li>
+                <li><i class="fas fa-tshirt"></i><a href="<?= BASE_URL ?>producto/gestion">Productos</a></li>
+                <li><i class="fas fa-shopping-cart"></i><a href="#">Pedidos</a></li>
             <?php endif; ?>
             <?php if (isset($_SESSION['identity'])) : ?>
-                <li><a href="#">Mis pedidos</a></li>
-                <li><a href="<?= BASE_URL ?>usuario/logout">Cerrar sesión</a></li>
+                <li><i class="fas fa-shopping-basket"></i><a href="#">Mis pedidos</a></li>
+                <li><i class="fas fa-sign-out-alt"></i><a href="<?= BASE_URL ?>usuario/logout">Cerrar sesión</a></li>
             <?php else : ?>
-                <li><a href="<?= BASE_URL ?>usuario/registro">Registrate aqui</a></li>
+                <li><i class="fas fa-sign-in-alt"></i><a href="<?= BASE_URL ?>usuario/registro">Registrate aqui</a></li>
             <?php endif; ?>
         </ul>
     </div> <!--	fin #login	-->
