--- a/views/layout/header.phtml
+++ b/views/layout/header.phtml
@@ -17,23 +17,23 @@
         <div id="logo">
             <img src="<?= BASE_URL ?>/assets/img/camiseta.png" alt="Camiseta Logo">
 
-            <a href="index.php">Tienda de camisetas</a>
+            <a href="<?= BASE_URL ?>">Tienda de camisetas</a>
         </div>
     </header>
     <!--	MENU	-->
     <?php $categorias = Utils::showCategorias(); ?>
     <nav id="menu">
-        <ul>
-            <li>
-                <a href="#">Inicio</a>
-            </li>
-            <?php while ($cat = $categorias->fetch_object()) : ?>
-                <li>
-                    <a href="#"><?= $cat->nombre; ?></a>
-                </li>
-            <?php endwhile; ?>
+                <ul>
+                    <li>
+                        <a href="<?=BASE_URL?>">Inicio</a>
+                             </li>
+                             <?php while ($cat = $categorias->fetch_object()) : ?>
+                        <li>
+                            <a href="<?=BASE_URL?>categoria/ver&id=<?=$cat->id?>"><?= $cat->nombre; ?></a>
+                        </li>
+                    <?php endwhile; ?>
 
-        </ul>
-    </nav>
+                </ul>
+                </nav>
 
-    <div id="contenido">
+                <div id="contenido">
