--- a/views/producto/destacados.phtml
+++ b/views/producto/destacados.phtml
@@ -1,20 +1,18 @@
-<h1>Productos destacados</h1>
-<div class="producto">
-    <img src="assets/img/camiseta.png" alt="camiseta">
-    <h2>Camiseta Azul Ancha</h2>
-    <p>30 euros</p>
-    <input type="button" value="Comprar" class="button">
-</div><!--	fin .product	-->
-<div class="producto">
-    <img src="assets/img/camiseta.png" alt="camiseta">
-    <h2>Camiseta Azul Ancha</h2>
-    <p>30 euros</p>
-    <input type="button" value="Comprar" class="button">
-</div><!--	fin .product	-->
-<div class="producto">
-    <img src="assets/img/camiseta.png" alt="camiseta">
-    <h2>Camiseta Azul Ancha</h2>
-    <p>30 euros</p>
-    <input type="button" value="Comprar" class="button">
-</div><!--	fin .product	-->
+<h1>Alguno de nuestros productos</h1>
 
+<?php while ($product = $productos->fetch_object()) : ?>
+    <div class="producto">
+        <a href="<?=BASE_URL?>producto/ver&id=<?=$product->id?>">
+            <?php if ($product->imagen != null) : ?>
+                <img src="<?= BASE_URL ?>upload/images/<?= $product->imagen ?>">
+            <?php else : ?>
+                <img src="<?= BASE_URL ?>assets/img/camiseta.png">
+            <?php endif; ?>
+            <h2><?= $product->nombre ?></h2>
+        </a>
+        <p>$<?= $product->precio ?></p>
+
+        <a href="" class="button">Comprar</a>
+
+    </div><!--	fin .product	-->
+<?php endwhile; ?>
