--- a/views/categoria/ver.phtml
+++ b/views/categoria/ver.phtml
@@ -15,7 +15,7 @@
                     <h2><?= $product->nombre ?></h2>
                 </a>
                 <p>$<?= $product->precio ?></p>
-                <a href="" class="button">Comprar</a>
+                <a href="<?= BASE_URL ?>carrito/add&id=<?= $product->id ?>" class="button">Comprar</a>
             </div><!--	fin .product	-->
         <?php endwhile; ?>
 
