--- a/views/producto/destacados.phtml
+++ b/views/producto/destacados.phtml
@@ -2,7 +2,7 @@
 
 <?php while ($product = $productos->fetch_object()) : ?>
     <div class="producto">
-        <a href="<?=BASE_URL?>producto/ver&id=<?=$product->id?>">
+        <a href="<?= BASE_URL ?>producto/ver&id=<?= $product->id ?>">
             <?php if ($product->imagen != null) : ?>
                 <img src="<?= BASE_URL ?>upload/images/<?= $product->imagen ?>">
             <?php else : ?>
@@ -12,7 +12,7 @@
         </a>
         <p>$<?= $product->precio ?></p>
 
-        <a href="" class="button">Comprar</a>
+        <a href="<?= BASE_URL ?>carrito/add&id=<?= $product->id ?>" class="button">Comprar</a>
 
     </div><!--	fin .product	-->
 <?php endwhile; ?>
