Pedidos de la Tienda (detalle de pedido)

--- a/views/carrito/index.phtml
+++ b/views/carrito/index.phtml
@@ -27,5 +27,5 @@
 <?php $stats = Utils::statsCarrito(); ?>
 <div id="total-carrito" class="clearfix">
     <h3>Precio total: $<?=$stats['total']?></h3>
-    <a href="" class="button button-pedido">Realizar Pedido</a>
+    <a href="<?=BASE_URL?>pedido/hacer"  class="button button-pedido">Realizar Pedido</a>
 </div>
