--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -470,8 +470,26 @@ Yb       dP__Yb  88"Yb  88"Yb  88   88   Yb   dP      8I  dY 88""       Yb      
 	margin-right: 20px;
 }
 
- .button-pedido{
+.button-pedido{
 	display: inline-block;
 	width: 130px;
 	text-align: center;
+}
+
+/*
+ 
+  dP""b8  dP"Yb  88b 88 888888 88 88""Yb 8b    d8    db    8888b.   dP"Yb  
+ dP   `" dP   Yb 88Yb88 88__   88 88__dP 88b  d88   dPYb    8I  Yb dP   Yb 
+ Yb      Yb   dP 88 Y88 88""   88 88"Yb  88YbdP88  dP__Yb   8I  dY Yb   dP 
+  YboodP  YbodP  88  Y8 88     88 88  Yb 88 YY 88 dP""""Yb 8888Y"   YbodP  
+ 
+*/
+.pedido_titulo{
+	margin-bottom: 0px;
+}
+.datos_pedido {
+	margin: 0px auto;
+}
+.pedido_confirmado{
+	margin-top: 20px;
 }
