Final Proyecto tienda virtual de camisetas

--- a/views/carrito/index.phtml
+++ b/views/carrito/index.phtml
@@ -1,31 +1,45 @@
 <h1>Carrito de la Compra</h1>
+<?php if (isset($_SESSION['carrito']) && count($_SESSION['carrito']) >= 1) : ?>
 
-<table>
-    <tr>
-        <th>Imagen</th>
-        <th>Nombre</th>
-        <th>Precio</th>
-        <th>Unidades</th>
-    </tr>
-    <?php foreach ($carrito as $indice => $elemento) :
-        $producto = $elemento['producto'];
-        ?>
+    <table>
         <tr>
-            <td>
-                <?php if ($producto->imagen != null) : ?>
-                    <img src="<?= BASE_URL ?>upload/images/<?= $producto->imagen ?>" class="img_carrito">
-                <?php else : ?>
-                    <img src="<?= BASE_URL ?>assets/img/camiseta.png" class="img_carrito">
-                <?php endif; ?>
-            </td>
-            <td><a href="<?= BASE_URL ?>producto/ver&id=<?= $producto->id ?>"><?= $producto->nombre ?></a></td>
-            <td><?= $producto->precio ?></td>
-            <td><?= $elemento['unidades'] ?></td>
+            <th>Imagen</th>
+            <th>Nombre</th>
+            <th>Precio</th>
+            <th>Unidades</th>
+            <th>Eliminar</th>
         </tr>
-    <?php endforeach; ?>
-</table>
-<?php $stats = Utils::statsCarrito(); ?>
-<div id="total-carrito" class="clearfix">
-    <h3>Precio total: $<?=$stats['total']?></h3>
-    <a href="<?=BASE_URL?>pedido/hacer"  class="button button-pedido">Realizar Pedido</a>
-</div>
+        <?php foreach ($carrito as $indice => $elemento) :
+            $producto = $elemento['producto'];
+            ?>
+            <tr>
+                <td>
+                    <?php if ($producto->imagen != null) : ?>
+                        <img src="<?= BASE_URL ?>upload/images/<?= $producto->imagen ?>" class="img_carrito">
+                    <?php else : ?>
+                        <img src="<?= BASE_URL ?>assets/img/camiseta.png" class="img_carrito">
+                    <?php endif; ?>
+                </td>
+                <td><a href="<?= BASE_URL ?>producto/ver&id=<?= $producto->id ?>"><?= $producto->nombre ?></a></td>
+                <td><?= $producto->precio ?></td>
+                <td>
+                    <a href="<?= BASE_URL ?>carrito/up&index=<?= $indice ?>"><i class="fas fa-caret-up"></i></a>
+                    <?= $elemento['unidades'] ?>
+                    <a href="<?= BASE_URL ?>carrito/down&index=<?= $indice ?>"><i class="fas fa-sort-down"></i></a>
+
+                </td>
+                <td><a href="<?= BASE_URL ?>carrito/remove&index=<?= $indice ?>"><i class="fas fa-trash-alt"></i></a></td>
+            </tr>
+        <?php endforeach; ?>
+    </table>
+    <div class="delete-carrito">
+        <a href="<?= BASE_URL ?>carrito/delete_all" class="button button-pedido button-red">Vaciar carrito</a>
+    </div>
+    <?php $stats = Utils::statsCarrito(); ?>
+    <div id="total-carrito" class="clearfix">
+        <h3>Precio total: $<?= $stats['total'] ?></h3>
+        <a href="<?= BASE_URL ?>pedido/hacer" class="button button-pedido">Realizar Pedido</a>
+    </div>
+<?php else : ?>
+    <p>No hay productos seleccionados, por favor selecciona un producto</p>
+<?php endif; ?>
