--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -230,6 +230,9 @@ input[type="file"]{
 	text-align: center;
 	margin-bottom: 20px;
 }
+.button-red{
+	background-color: red;
+} 
 
 
 label,
@@ -474,6 +477,12 @@ Yb       dP__Yb  88"Yb  88"Yb  88   88   Yb   dP      8I  dY 88""       Yb      
 	display: inline-block;
 	width: 130px;
 	text-align: center;
+}
+
+.delete-carrito {
+	width: 200px;
+	float: left;
+	margin-top: 15px;
 }
 
 /*
