--- a/views/pedido/mis_pedidos.phtml
+++ b/views/pedido/mis_pedidos.phtml
@@ -1,20 +1,26 @@
-<h1>Mis pedidos</h1>
+<?php if (isset($gestion)) : ?>
+    <h1>Gestionar pedidos</h1>
+<?php else : ?>
+    <h1>Mis pedidos</h1>
+<?php endif; ?>
 
 <table>
     <tr>
         <th>Nº Pedido</th>
         <th>Costo</th>
         <th>Fecha</th>
+        <th>Estado</th>
     </tr>
     <?php
     while ($ped = $pedidos->fetch_object()) :
         ?>
         <tr>
             <td>
-                <a href="<?= BASE_URL ?>pedido/detalle&id=<?=$ped->id?>"><?= $ped->id ?></a>
+                <a href="<?= BASE_URL ?>pedido/detalle&id=<?= $ped->id ?>"><?= $ped->id ?></a>
             </td>
             <td>$<?= $ped->coste ?></td>
             <td><?= $ped->fecha ?></td>
+            <td><?= Utils::showStatus($ped->estado)  ?></td>
         </tr>
     <?php endwhile; ?>
 </table>
